--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Usage\n",
     "\n",
-    "Pipelines in this library use common notation, as seen in LangChain or R. However it differs from LangChain and other Pipeline libs through certain flexible differences."
+    "Pipelines in this library use common notation, as seen in LangChain or R. However it differs from LangChain and other Pipeline libs through certain abstractions."
    ],
    "id": "afc42bca22866a26"
   },
